# asterx1_node

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: all_but_bag.launch  asterx1_nodes.launch  asterx1_nodes_bag.launch  fix_detail.launch  fix_detail_bag.launch  gps_only_bag.launch  orbit_evolution.launch  orbit_evolution_bag.launch  parking_quimica_10.launch  positions_to_txt.launch  raw_rec_bag.launch  raw_rec_only_parking_10.launch  raw_rec_only_teo_around_building.launch  show_trajectories.launch
msg/: SatPr.msg  SatPrArray.msg
rviz/: asterx1_view.rviz  detail.rviz  fix_detail.rviz  orbit_view.rviz
src/: raw_receiver_main.cpp  raw_receiver_node.cpp  raw_receiver_node.h  talker.cpp  trilateration_main.cpp  trilateration_node.cpp  trilateration_node.h  visualization_helper_main.cpp  visualization_helper_node.cpp  visualization_helper_node.h  viz_helper_main.cpp  viz_helper_node.cpp  viz_helper_node.h
