<?xml version="1.0"?>
<package>
  <name>asterx1_node</name>
  <version>0.0.1</version>
  <description>The asterx1_node package</description>

  <maintainer email="pier.tirindelli@gmail.com">Pier Tirindelli</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>iri_asterx1_gps</build_depend>
  <run_depend>iri_asterx1_gps</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>ros_cpp</build_depend>
  <run_depend>ros_cpp</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>


  <build_depend>visualization_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>

  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
</package>
